--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <script type="text/javascript" src="http://code.createjs.com/soundjs-0.4.1.min.js"></script>
 <script type="text/javascript" src="http://code.createjs.com/preloadjs-0.3.1.min.js"></script>
 <script type="text/javascript" src="block.js"></script>
+<script type="text/javascript" src="blockdropper.js"></script>
 <script type="text/javascript" src="blockgroup.js"></script>
+<script type="text/javascript" src="level.js"></script>
 <script type="text/javascript" src="grid.js"></script>
 <script type="text/javascript" src="game.js"></script>
 </head>
