--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script type="text/javascript" src="level.js"></script>
 <script type="text/javascript" src="grid.js"></script>
 <script type="text/javascript" src="game.js"></script>
+<script type="text/javascript" src="gameoverscreen.js"></script>
 </head>
 <body onLoad="init();">
 	<div style="margin: 0 auto;width: 640px">
