--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
 <script src="http://code.createjs.com/tweenjs-0.4.1.min.js"></script>
 <script type="text/javascript" src="http://code.createjs.com/soundjs-0.4.1.min.js"></script>
 <script type="text/javascript" src="http://code.createjs.com/preloadjs-0.3.1.min.js"></script>
-<script type="text/javascript" src="block.js"></script>
-<script type="text/javascript" src="blockdropper.js"></script>
-<script type="text/javascript" src="blockgroup.js"></script>
-<script type="text/javascript" src="level.js"></script>
-<script type="text/javascript" src="grid.js"></script>
-<script type="text/javascript" src="game.js"></script>
-<script type="text/javascript" src="gameoverscreen.js"></script>
-<script type="text/javascript" src="mainmenu.js"></script>
+<script type="text/javascript" src="javascripts/block.js"></script>
+<script type="text/javascript" src="javascripts/blockdropper.js"></script>
+<script type="text/javascript" src="javascripts/blockgroup.js"></script>
+<script type="text/javascript" src="javascripts/level.js"></script>
+<script type="text/javascript" src="javascripts/grid.js"></script>
+<script type="text/javascript" src="javascripts/game.js"></script>
+<script type="text/javascript" src="javascripts/gameoverscreen.js"></script>
+<script type="text/javascript" src="javascripts/mainmenu.js"></script>
 </head>
 <body onLoad="init();">
   <div class="ribbon">
